--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	color: white;
 	max-height: 100vh;
 	font-family: arial, sans-serif;
-    margin: 0;
+	margin: 0;
 }
 
 nav {
@@ -13,6 +13,7 @@ nav {
 	align-content: center;
 	justify-content: flex-end;
 	align-items: center;
+	font-size: 13px;
 }
 
 nav div {
@@ -25,9 +26,43 @@ nav div {
 	cursor: pointer;
 }
 
+.nav-img.dots {
+	width: 24px;
+	height: 24px;
+}
+
+.nav-img.pfp {
+	width: 32px;
+	height: 32px;
+}
+
 .nav-img:hover {
 	background-color: #515151;
 	border-radius: 50%;
+}
+
+.main-section {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
+	justify-content: center;
+	height: calc(100vh - 400px);
+	overflow: hidden;
+	font-size: 14px;
+}
+
+.main-logo {
+	display: flex;
+	justify-content: center;
+}
+.logo {
+	width: 290px;
+}
+.profile {
+	width: 32px;
+	height: 32px;
+	border-radius: 25px;
 }
 
 input {
@@ -37,27 +72,90 @@ input {
 	padding-left: 5px;
 }
 
+.search-bar {
+	display: flex;
+	border: 1px solid #5f6368;
+	border-radius: 40px;
+	padding: 10px;
+	width: 584px;
+	margin-top: 30px;
+	align-content: center;
+	justify-content: center;
+}
+
+.text-area {
+	width: 100%;
+}
+
+.text-area.btn {
+	padding-top: 6px;
+	padding-left: 10px;
+}
+
 .search-bar:hover {
 	background-color: #303134;
 	border: 1px solid #303134 !important;
-	-webkit-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.35);
-    -moz-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.35);
-    box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.35);
+	-webkit-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.35);
+	-moz-box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.35);
+	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.35);
 }
 
+button {
+	all: unset;
+	background-color: #303134;
+	padding: 8px 15px 8px 15px;
+	border-radius: 4px;
+	border: 1px solid #303134;
+	margin-right: 10px;
+}
 
-button{
-    all: unset;
-    background-color: #303134;
-    padding: 8px 15px 8px 15px;
-    border-radius: 4px;
-    border: 1px solid #303134;
+.main-btn {
+	display: flex;
+	position: inherit;
+	justify-content: center;
+	margin-top: 40px;
+	align-items: center;
 }
 
 button:hover {
-    border: 1px solid #515151;
+	border: 1px solid #515151;
 }
 
-footer div .links div {
-    padding: 10px;
+.footer-section {
+	position: absolute;
+	bottom: 0;
+	background-color: #171717;
+	width: 100%;
+	color: #bdc1c6;
+}
+
+.footer-location {
+	padding: 15px 30px;
+	border-bottom: 1px solid #3c4043;
+	font-size: 15px;
+}
+
+.footer-about {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 5px;
+}
+
+.footer-links {
+	display: flex;
+	justify-content: space-between;
+	font-size: 14px;
+	font-family: arial, sans-serif;
+	padding: 0 20px;
+}
+
+.links {
+	padding: 10px;
+	color: inherit;
+	text-decoration: none;
+}
+
+.links:hover {
+	text-decoration: underline;
 }
